--- a/Food/templates/Food/index.html
+++ b/Food/templates/Food/index.html
@@ -1,9 +1,22 @@
-{% for item in allItems %}
-<ul>
-	<li>
-		<a href="{% url 'food: detail' item.id %}">
-			{{ item.id }} {{item.item_name}}
-		</a>
-	</li>
-</ul>
-{% endfor %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="{% static 'Food/style.css' %}" />
+	</head>
+	<body>
+		{% for item in allItems %}
+		<ul>
+			<li>
+				<a href="{% url 'food:detail' item.id %}">
+					{{ item.id }} {{item.item_name}}
+				</a>
+			</li>
+		</ul>
+		{% endfor %}
+	</body>
+</html>
