Added images and styling with CSS and bootstrap

--- a/Food/static/Food/style.css
+++ b/Food/static/Food/style.css
@@ -1,3 +1,50 @@
 body {
 	background-color: skyblue;
 }
+
+#header {
+	display: flex;
+	width: 100%;
+	height: 80px;
+	background: black;
+	padding: 10px;
+	align-items: center;
+	justify-content: space-between;
+}
+.heading {
+	font-size: 1.2em;
+	text-decoration: none;
+	color: red;
+}
+
+#flex {
+	display: flex;
+	justify-content: end;
+}
+.no-link {
+	text-decoration: none;
+	margin-left: 8px;
+}
+.container {
+	display: flex;
+	margin-top: 40px;
+	align-items: center;
+}
+
+.image {
+	width: 200px;
+	height: 150px;
+	display: flex;
+	margin-left: 40px;
+}
+
+.details {
+	justify-content: ;
+	margin-left: 50px;
+}
+
+.btn-success{
+	margin-left: 80px;
+}
+
+}
