--- a/Food/templates/Food/detail.html
+++ b/Food/templates/Food/detail.html
@@ -1,2 +1,4 @@
+{% extends 'Food/base.html' %} {% block body %}
 <h1>{{ item_detail.item_name}}</h1>
 <h2>{{item_detail.item_desc}}</h2>
+{% endblock %}
