Made some changes

--- a/Food/templates/Food/detail.html
+++ b/Food/templates/Food/detail.html
@@ -1,4 +1,5 @@
 {% extends 'Food/base.html' %} {% block body %}
+<img height="300px" src="{{ item_detail.item_image }}" />
 <h1>{{ item_detail.item_name}}</h1>
 <h2>{{item_detail.item_desc}}</h2>
 {% endblock %}
