Added login functionality

--- a/Food/templates/Food/base.html
+++ b/Food/templates/Food/base.html
@@ -20,6 +20,9 @@
 				<a class="no-link" href="#"> Edit Item </a>
 			</div>
 		</div>
-		{% block body %} {% endblock %}
+
+		{% if messages %} {% for message in messages %}
+		<div class="alert alert-{{ message.tags }}">{{message}}</div>
+		{% endfor %} {% endif %} {% block body %} {% endblock %}
 	</body>
 </html>
